<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background" >

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_highscores"
        android:layout_below="@+id/button_highscores"
        android:layout_marginTop="29dp"
        android:minHeight="20dip"
        android:minWidth="150dip"
        android:text="@string/button_exit" />

    <Button
        android:id="@+id/button_newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:minHeight="25dp"
        android:minWidth="150dp"
        android:text="@string/button_new" />

    <Button
        android:id="@+id/button_highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_newgame"
        android:layout_below="@+id/button_newgame"
        android:layout_marginTop="22dp"
        android:minHeight="25dip"
        android:minWidth="150dip"
        android:text="@string/button_highscore" />

    <TextView
        android:id="@+id/textview_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:height="50dp"
        android:minHeight="60dp"
        android:minWidth="200dp"
        android:textSize="40sp"
        android:typeface="serif"
        android:text="@string/game_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

</RelativeLayout>