<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:maxLength="12"
                android:text="@string/highscores_nickname" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_score" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/highscores_empty_field" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:minHeight="25dip"
        android:minWidth="100dip"
        android:text="@string/button_clear" />

</RelativeLayout>